implement basic device profile sync
